# otcv8

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  init.lua  initExample.lua  vcpkg.json
assets/: init.lua
assets/modules/corelib/: corelib.otmod
assets/modules/corelib/ui/: uiminiwindow.lua
assets/modules/game_actionbar/: actionbar.lua
assets/modules/game_interface/: gameinterface.otui
modules/client/: client.otmod
modules/game_interface/: interface.otmod
src/: CMakeLists.txt  main.cpp
src/client/: creature.cpp  game.cpp  protocolgameparse.cpp  spritemanager.cpp  thingtype.cpp  thingtypemanager.cpp  towns.cpp
src/framework/core/: application.cpp  logger.cpp  resourcemanager.cpp
src/framework/graphics/: glutil.h  graphics.cpp
src/framework/luaengine/: luaexception.h
src/framework/net/: inputmessage.cpp  inputmessage.h  server.cpp
src/framework/otml/: otmlexception.h  otmlparser.cpp
src/framework/platform/: platformwindow.cpp  unixplatform.cpp  x11window.cpp
src/framework/stdext/: cast.h  exception.h  packed_storage.h
src/framework/util/: crypt.cpp  crypt.h  point.h
